// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Field Container Styling match noMargin snapshot 1`] = `
.c0 {
  margin: 0;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  Children
</div>
`;

exports[`Form Field Container Styling matches default snapshot 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  Children
</div>
`;

exports[`Form Field Container Styling matches invalid snapshot 1`] = `
.c1 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  <span
    aria-live="polite"
    class="c1"
    data-testid="invalid-field"
    id="id_invalid"
    role="alert"
  >
    <svg
      class="c2"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
    This text area input is invalid
  </span>
  Children
</div>
`;

exports[`Form Field Styling match noMargin snapshot 1`] = `
.c0 {
  margin: 0;
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  Children
</div>
`;

exports[`Form Field Styling matches default snapshot 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  Children
</div>
`;

exports[`Form Field Styling matches invalid snapshot 1`] = `
.c1 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

<div
  class="c0"
>
  <span
    aria-live="polite"
    class="c1"
    data-testid="invalid-field"
    id="id_invalid"
    role="alert"
  >
    <svg
      class="c2"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
    This text area input is invalid
  </span>
  Children
</div>
`;
